; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/extr_industrialio-core.c_iio_get_time_res.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/extr_industrialio-core.c_iio_get_time_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }

@hrtimer_resolution = common dso_local global i32 0, align 4
@LOW_RES_NSEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iio_get_time_res(%struct.iio_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.iio_dev*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %3, align 8
  %4 = load %struct.iio_dev*, %struct.iio_dev** %3, align 8
  %5 = call i32 @iio_device_get_clock(%struct.iio_dev* %4)
  switch i32 %5, label %10 [
    i32 130, label %6
    i32 133, label %6
    i32 131, label %6
    i32 134, label %6
    i32 128, label %6
    i32 129, label %8
    i32 132, label %8
  ]

6:                                                ; preds = %1, %1, %1, %1, %1
  %7 = load i32, i32* @hrtimer_resolution, align 4
  store i32 %7, i32* %2, align 4
  br label %12

8:                                                ; preds = %1, %1
  %9 = load i32, i32* @LOW_RES_NSEC, align 4
  store i32 %9, i32* %2, align 4
  br label %12

10:                                               ; preds = %1
  %11 = call i32 (...) @BUG()
  br label %12

12:                                               ; preds = %6, %8, %10
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @iio_device_get_clock(%struct.iio_dev*) #1

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
